formatting and readme

--- a/index.html
+++ b/index.html
@@ -41,19 +41,20 @@
         
         
         <br>
-
-        <button type="button" class="btn btn-primary">
+        <div class="row">
+        <button type="button" class="col-sm btn btn-primary">
                 Target Score <span class="badge badge-light" id="target">0</span>
               </button>
-        <button type="button" class="btn btn-primary">
+        <button type="button" class="col-sm btn btn-primary">
                 Total Score <span class="badge badge-light" id="total">0</span>
               </button>
-        <button type="button" class="btn btn-primary">
+        <button type="button" class="col-sm btn btn-primary">
                 Wins <span class="badge badge-light" id="wins">0</span>
               </button>
-        <button type="button" class="btn btn-primary">
+        <button type="button" class="col-sm btn btn-primary">
                 Losses <span class="badge badge-light" id="losses">0</span>
-              </button>            
+              </button>  
+        </div>                
 
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -61,14 +62,3 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js" integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em" crossorigin="anonymous"></script>    
 </body>
 </html>
-
-<!-- divs necessary:
-Crystal Collector game header 
-Instructions div 
-div showing target score
-dive showing wins and losses
-div within that for wins
-div next to that for losses
-div for each gem 
-div for Your Total Score is:
-div for total score -->
